{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 67,
  "lineage": "5f92c070-d13d-4237-3df1-ec79a0ebb93d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "gitea_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04c913012f8977029",
            "arn": "arn:aws:ec2:ap-southeast-1:211125364515:instance/i-019ab7836b8d96fe6",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-019ab7836b8d96fe6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "GiteaEC2-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f521d9f5e762012f",
            "private_dns": "ip-172-31-88-224.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.88.224",
            "public_dns": "ec2-13-212-230-160.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.212.230.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b72cbf394c7684ae",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-00c2cae763ecdb5bb"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03edf358a37956c7f",
            "tags": {
              "Name": "SGDC1-S-GITEA001"
            },
            "tags_all": {
              "Name": "SGDC1-S-GITEA001"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00c2cae763ecdb5bb"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "gitea_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:211125364515:loadbalancer/app/Gitea-ALB/d31cc8c152c40218",
            "arn_suffix": "app/Gitea-ALB/d31cc8c152c40218",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "Gitea-ALB-2095956101.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:211125364515:loadbalancer/app/Gitea-ALB/d31cc8c152c40218",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Gitea-ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00c2cae763ecdb5bb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03edf358a37956c7f"
              },
              {
                "subnet_id": "subnet-0480c548e93758c2c"
              }
            ],
            "subnets": [
              "subnet-03edf358a37956c7f",
              "subnet-0480c548e93758c2c"
            ],
            "tags": {
              "Name": "Gitea-ALB"
            },
            "tags_all": {
              "Name": "Gitea-ALB"
            },
            "vpc_id": "vpc-0e59b372194aab15a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "gitea_alb_listener443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:211125364515:listener/app/Gitea-ALB/d31cc8c152c40218/ab682b0516bc2659",
            "certificate_arn": "arn:aws:acm:ap-southeast-1:211125364515:certificate/c06e93ab-dcb5-4b6c-afcf-d6280358a3c3",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:211125364515:targetgroup/Gitea-ALB-TG/cab74ec2fc1a92d5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:211125364515:listener/app/Gitea-ALB/d31cc8c152c40218/ab682b0516bc2659",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:211125364515:loadbalancer/app/Gitea-ALB/d31cc8c152c40218",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {
              "Application": "Gitea"
            },
            "tags_all": {
              "Application": "Gitea"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.gitea_alb",
            "aws_lb_target_group.gitea_tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "gitea_alb_listener80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:211125364515:listener/app/Gitea-ALB/d31cc8c152c40218/99d6e273f595f9bc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:211125364515:listener/app/Gitea-ALB/d31cc8c152c40218/99d6e273f595f9bc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:211125364515:loadbalancer/app/Gitea-ALB/d31cc8c152c40218",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.gitea_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "gitea_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:211125364515:targetgroup/Gitea-ALB-TG/cab74ec2fc1a92d5",
            "arn_suffix": "targetgroup/Gitea-ALB-TG/cab74ec2fc1a92d5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:211125364515:targetgroup/Gitea-ALB-TG/cab74ec2fc1a92d5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:211125364515:loadbalancer/app/Gitea-ALB/d31cc8c152c40218"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Gitea-ALB-TG",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e59b372194aab15a"
          },
          "dependencies": [
            "aws_lb.gitea_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "gitea_tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:211125364515:targetgroup/Gitea-ALB-TG/cab74ec2fc1a92d5-20240624121629210000000002",
            "port": 443,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:211125364515:targetgroup/Gitea-ALB-TG/cab74ec2fc1a92d5",
            "target_id": "i-019ab7836b8d96fe6"
          },
          "dependencies": [
            "aws_instance.gitea_instance",
            "aws_lb.gitea_alb",
            "aws_lb_target_group.gitea_tg"
          ]
        }
      ]
    }
  ]
}